--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "babel-eslint": "^8.2.6",
     "babel-preset-stage-1": "^6.1.18",
     "eslint": "^5.4.0",
-    "lodash": "^3.10.1",
+    "lodash": "^4.17.5",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
-    "regex-easy": "^1.0.16",
-    "youtube-api-search": "0.0.5"
+    "regex-easy": "^1.0.18",
+    "youtube-api-search": "0.0.5",
+    "youtube-api-v3-search": "^1.0.2"
   }
 }
