--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "react-with-redux",
+  "name": "redux-simple-starter",
   "version": "1.0.0",
-  "description": "React app",
+  "description": "Simple starter package for Redux with React and Babel support",
   "main": "index.js",
-  "repository": "git@gitlab.com:rohit104/Fall2018_Sameer_ReactAWS.git",
+  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
-    "test:watch": "npm run test -- --watch",
-    "eslint": "./node_modules/.bin/eslint ./",
-    "eslintfix": "./node_modules/.bin/eslint ./ --fix"
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test:watch": "npm run test -- --watch"
   },
-  "author": "Sameer Saini <sameersaini40@gmail.com>",
+  "author": "",
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.2.1",
@@ -21,14 +20,11 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
-    "babel-eslint": "^8.2.6",
     "babel-preset-stage-1": "^6.1.18",
-    "eslint": "^5.4.0",
     "lodash": "^3.10.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
-    "redux": "4.0.0",
-    "regex-easy": "^1.0.16"
+    "redux": "4.0.0"
   }
 }
