--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "babel-eslint": "^9.0.0",
     "babel-preset-stage-1": "^6.1.18",
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "lodash": "^3.10.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
