--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^1.14.0"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-eslint": "^8.2.6",
     "babel-preset-stage-1": "^6.1.18",
     "eslint": "^5.4.0",
@@ -28,7 +29,9 @@
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
+    "react-router-dom": "^4.2.2",
     "redux": "4.0.0",
+    "redux-promise": "^0.6.0",
     "regex-easy": "^1.0.16"
   }
 }
