--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "babel-eslint": "^8.2.6",
     "babel-preset-stage-1": "^6.1.18",
     "eslint": "^5.4.0",
+    "firebase": "^5.4.2",
     "lodash": "^3.10.1",
     "react": "16.3.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "redux": "4.0.0",
+    "redux-thunk": "^2.3.0",
     "regex-easy": "^1.0.16"
   }
 }
