--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "4.0.0",
     "redux-form": "^6.6.3",
     "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "regex-easy": "^1.0.16"
   }
 }
