--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^5.4.0",
     "lodash": "^3.10.1",
     "react": "16.3.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "16.3.2",
     "react-redux": "5.0.7",
     "react-router-dom": "^4.2.2",
